--- a/catalog-item.html
+++ b/catalog-item.html
@@ -8,7 +8,7 @@
 		<header>
 			<nav>
 				<a href="">
-					<img src="" alt="Логотип барбешопа «Бородинский»">
+					<img style="background-color: black;" src="img/logo.svg" width="111" height="24" alt="Логотип барбешопа «Бородинский»">
 				</a>
 				<ul>
 					<li><a href="">Информация</a></li>
@@ -30,19 +30,22 @@
 				<li><a href="">Средства для ухода</a></li>
 				<li>Набор для путешествий «Baxter of California»</li>
 			</ul>
+			<!-- Изображения товара вынесены в отдельную секцию -->
 			<section>
 				<h2>Изображения товара</h2>
+				<!-- Главная картинка завернута в p так как является визуальным описанием товара -->
 				<p>
-					<img src="" alt="Фото всего набора">
+					<img src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
 				</p>
 				<ul>
-					<li><img src="" alt="Фото в анфас"></li>
-					<li><img src="" alt="Фото в профиль"></li>
-					<li><img src="" alt="Фото отдельной части"></li>
+					<li><img src="img/product-sm1.jpg" width="140" height="149" alt="Фото в анфас"></li>
+					<li><img src="img/product-sm2.jpg" width="140" height="149" alt="Фото в профиль"></li>
+					<li><img src="img/product-sm3.jpg" width="140" height="149" alt="Фото отдельной части"></li>
 				</ul>
 			</section>
 			<section>
 				<h2>Описание товара</h2>
+					<!-- Наличие и артикул завернуты в разные p на скринкасте -->
 					<p>
 						<span>Есть в наличии</span>
 						<span>Артикул: dexter-ae</span>
