--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 		<header>
 			<nav>
 				<a href="">
-					<img src="" alt="Логотип барбешопа «Бородинский»">
+					<img style="background-color: black;" src="img/logo.svg" width="111" height="24" alt="Логотип барбешопа «Бородинский»">
 				</a>
 				<ul>
 					<li><a href="">Информация</a></li>
@@ -45,7 +45,7 @@
 						</h3>
 						<p>
 							<a href="catalog-item.html">
-									<img src="" alt="Набор для путешествий «Baxter of California»">
+									<img src="img/product1.jpg" width="200" height="165" alt="Набор для путешествий «Baxter of California»">
 							</a>
 						</p>
 						<p>		
@@ -62,7 +62,7 @@
 							</h3>
 							<p>
 								<a href="catalog-item.html">
-										<img src="" alt="Увлажняющий кондиционер «Baxter of California»">
+										<img src="img/product2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
 								</a>
 							</p>
 							<p>		
@@ -79,7 +79,7 @@
 							</h3>
 							<p>
 								<a href="catalog-item.html">
-										<img src="" alt="Гель для волос «SUAVECITO»">
+										<img src="img/product3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
 								</a>
 							</p>
 							<p>		
@@ -96,7 +96,7 @@
 							</h3>
 							<p>
 								<a href="catalog-item.html">
-										<img src="" alt="Глина для укладки волос «American crew»">
+										<img src="img/product4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
 								</a>
 							</p>
 							<p>		
@@ -113,7 +113,7 @@
 							</h3>
 							<p>
 								<a href="catalog-item.html">
-										<img src="" alt="Гель для волос «AMERICAN CREW»">
+										<img src="img/product5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
 								</a>
 							</p>
 							<p>		
@@ -130,7 +130,7 @@
 							</h3>
 							<p>
 								<a href="catalog-item.html">
-										<img src="" alt="Набор для бритья «Baxter of California»">
+										<img src="img/product6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
 								</a>
 							</p>
 							<p>		
