--- a/catalog-item.html
+++ b/catalog-item.html
@@ -2,13 +2,13 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Страница каталога</title>
+		<title>Набор для путешествий «Baxter of California» - Барбершоп «Бородинский»</title>
 	</head>
 	<body>
 		<header>
 			<nav>
-				<a href="">
-					<img style="background-color: black;" src="img/logo.svg" width="111" height="24" alt="Логотип барбешопа «Бородинский»">
+				<a href="index.html">
+					<img src="img/logo.svg" width="111" height="24" alt="Логотип барбешопа «Бородинский»">
 				</a>
 				<ul>
 					<li><a href="">Информация</a></li>
@@ -18,7 +18,9 @@
 					<li><a href="">Контакты</a></li>
 				</ul>
 				<ul>
-						<li><a href="">Вход</a></li>
+					<li>
+						<a href="">Вход</a>
+					</li>
 				</ul>
 			</nav>
 		</header>
@@ -32,30 +34,28 @@
 			</ul>
 			<!-- Изображения товара вынесены в отдельную секцию -->
 			<section>
-				<h2>Изображения товара</h2>
+				<h2 class="visually-hidden">Изображения товара</h2>
 				<!-- Главная картинка завернута в p так как является визуальным описанием товара -->
 				<p>
 					<img src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
 				</p>
 				<ul>
 					<li><img src="img/product-sm1.jpg" width="140" height="149" alt="Фото в анфас"></li>
-					<li><img src="img/product-sm2.jpg" width="140" height="149" alt="Фото в профиль"></li>
-					<li><img src="img/product-sm3.jpg" width="140" height="149" alt="Фото отдельной части"></li>
+					<li><img src="img/product-sm2.jpg" width="140" height="149" alt="Фото отдельной части"></li>
+					<li><img src="img/product-sm3.jpg" width="140" height="149" alt="Фото всего набора"></li>
 				</ul>
 			</section>
 			<section>
-				<h2>Описание товара</h2>
+				<h2 class="visually-hidden">Описание товара</h2>
 					<!-- Наличие и артикул завернуты в разные p на скринкасте -->
-					<p>
-						<span>Есть в наличии</span>
-						<span>Артикул: dexter-ae</span>
-					</p>
+					<p>Есть в наличии</p>
+					<p>Артикул: dexter-ae</p>
 					<p>
 						Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
 					</p>
 					<p>		
 						<b>2 900 &#8381;</b>
-						<button type="button">Купить</button>
+						<a href="">Купить</a>
 					</p>
 					<h3>В набор входят:</h3>
 					<ul>
@@ -70,21 +70,26 @@
 		<footer>
 			<p>
 				Барбершоп «Бородинский»<br>
-				Адрес: г. Санкт-петербург, ул. б. Конюшенная, д. 19/8<br>
+				Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
 				<a href="">Как нас найти?</a><br>
 				Телефон: +7 (495) 666-02-66
 			</p>
 			<div>
-				<b>Давайте дружить!</b>
+				<p>Давайте дружить!</p>
 				<ul>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
+					<li>
+						<a href="">Вконтакте</a>
+					</li>
+					<li>
+						<a href="">Фейсбук</a>
+					</li>
+					<li>
+						<a href="">Инстаграм</a>
+					</li>
 				</ul>
 			</div>
-			<p>
-				<b>Разработано:</b><br>
-				<a href="https://htmlacademy.ru/">HTML Academy</a>
+			<p>Разработано:
+				<a href="https://htmlacademy.ru">HTML Academy</a>
 			</p>
 		</footer>
 	</body>
