--- a/catalog.html
+++ b/catalog.html
@@ -2,13 +2,13 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Страница каталога</title>
+		<title>Магазин - Барбершоп «Бородинский»</title>
 	</head>
 	<body>
 		<header>
 			<nav>
-				<a href="">
-					<img style="background-color: black;" src="img/logo.svg" width="111" height="24" alt="Логотип барбешопа «Бородинский»">
+				<a href="index.html">
+					<img src="img/logo.svg" width="111" height="24" alt="Логотип барбешопа «Бородинский»">
 				</a>
 				<ul>
 					<li><a href="">Информация</a></li>
@@ -18,130 +18,168 @@
 					<li><a href="">Контакты</a></li>
 				</ul>
 				<ul>
-						<li><a href="">Вход</a></li>
+					<li>
+						<a href="">Вход</a>
+					</li>
 				</ul>
 			</nav>
 		</header>
 		<main>
 			<h1>Средства для ухода</h1>
 			<ul>
-				<li><a href="">Главная</a></li>
+				<li><a href="index.html">Главная</a></li>
 				<li><a href="">Магазин</a></li>
 				<li>Средства для ухода</li>
 			</ul>
 			<section>
-				<h2>Фильтр товаров</h2>
-				<!--Здесь будет форма-->
+				<h2 class="visually-hidden">Фильтр товаров</h2>
+				<form action="" method="get">
+					<fieldset>
+						<legend>Производители:</legend>
+						<ul>
+							<li>
+								<input id="filter-baxter-of-california"  type="checkbox" name="baxter-of-california" checked>
+								<label for="filter-baxter-of-california">Baxter of California</label>
+							</li>
+							<li>
+								<input id="filter-mr-natty"  type="checkbox" name="mr-natty">
+								<label for="filter-mr-natty">Mr Natty</label>
+							</li>
+							<li>
+								<input id="filter-suavecito"  type="checkbox" name="suavecito" checked>
+								<label for="filter-suavecito">Suavecito</label>
+							</li>
+							<li>
+								<input id="filter-malin-goetz"  type="checkbox" name="malin-goetz">
+								<label for="filter-malin-goetz">Malin+Goetz</label>
+							</li>
+							<li>
+								<input id="filter-murrays"  type="checkbox" name="murrays">
+								<label for="filter-murrays">Murray's</label>
+							</li>
+							<li>
+								<input id="filter-american-crew"  type="checkbox" name="american-crew" checked>
+								<label for="filter-american-crew">American Crew</label>
+							</li>
+						</ul>
+					</fieldset>
+					<fieldset>
+						<legend>Группы товаров:</legend>
+						<ul>
+							<li>
+								<input id="filter-shave" type="radio" name="product-group" value="shaving">
+								<label for="filter-shave">Бритвенные принадлежности</label>
+							</li>
+							<li>
+								<input id="filter-care" type="radio" name="product-group" value="hair-care" checked>
+								<label for="filter-care">Средства для ухода</label>
+							</li>
+							<li>
+								<input id="filter-accessories" type="radio" name="product-group" value="accessories">
+								<label for="filter-accessories">Бритвенные принадлежности</label>
+							</li>
+						</ul>
+					</fieldset>
+					<button type="submit">Показать</button>
+				</form>
 			</section>
 			<section>
-				<h2>Список средств для ухода</h2>
+				<h2 class="visually-hidden">Список средств для ухода</h2>
 				<ul>
 					<li>
-						<h3>
-							<a href="catalog-item.html">
+						<a href="catalog-item.html">
+							<h3>
 								<span>Набор для путешествий</span>
 								<span>«Baxter of California»</span>
-							</a>
-						</h3>
-						<p>
-							<a href="catalog-item.html">
-									<img src="img/product1.jpg" width="200" height="165" alt="Набор для путешествий «Baxter of California»">
-							</a>
-						</p>
+							</h3>
+							<p>
+								<img src="img/product1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
+							</p>
+						</a>
 						<p>		
 							<b>2 900 &#8381;</b>
-							<button type="button">Купить</button>
+							<a href="">Купить</a>
 						</p>
 					</li>
 					<li>
+						<a href="catalog-item.html">
 							<h3>
-								<a href="catalog-item.html">
-									<span>Увлажняющий кондиционер</span>
-									<span>«Baxter of California»</span>
-								</a>
+								<span>Увлажняющий кондиционер</span>
+								<span>«Baxter of California»</span>
 							</h3>
 							<p>
-								<a href="catalog-item.html">
-										<img src="img/product2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
-								</a>
+								<img src="img/product2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
 							</p>
-							<p>		
-								<b>750 &#8381;</b>
-								<button type="button">Купить</button>
-							</p>
+						</a>
+						<p>		
+							<b>750 &#8381;</b>
+							<a href="">Купить</a>
+						</p>
 					</li>
 					<li>
+						<a href="catalog-item.html">
 							<h3>
-								<a href="catalog-item.html">
-									<span>Гель для волос</span>
-									<span>«SUAVECITO»</span>
-								</a>
+								<span>Гель для волос</span>
+								<span>«SUAVECITO»</span>
 							</h3>
 							<p>
-								<a href="catalog-item.html">
-										<img src="img/product3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
-								</a>
+								<img src="img/product3.jpg" width="220" height="165" alt="Гель для волос «SUAVECITO»">
 							</p>
-							<p>		
-								<b>290 &#8381;</b>
-								<button type="button">Купить</button>
-							</p>
+						</a>
+						<p>		
+							<b>290 &#8381;</b>
+							<a href="">Купить</a>
+						</p>
 					</li>
 					<li>
+						<a href="catalog-item.html">
 							<h3>
-								<a href="catalog-item.html">
-									<span>Глина для укладки волос</span>
-									<span>«American crew»</span>
-								</a>
+								<span>Глина для укладки волос</span>
+								<span>«American crew»</span>
 							</h3>
 							<p>
-								<a href="catalog-item.html">
-										<img src="img/product4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
-								</a>
+								<img src="img/product4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
 							</p>
-							<p>		
-								<b>500 &#8381;</b>
-								<button type="button">Купить</button>
-							</p>
+						</a>
+						<p>		
+							<b>500 &#8381;</b>
+							<a href="">Купить</a>
+						</p>
 					</li>
 					<li>
+						<a href="catalog-item.html">
 							<h3>
-								<a href="catalog-item.html">
-									<span>Гель для волос</span>
-									<span>«American crew»</span>
-								</a>
+								<span>Гель для волос</span>
+								<span>«American crew»</span>
 							</h3>
 							<p>
-								<a href="catalog-item.html">
-										<img src="img/product5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
-								</a>
+								<img src="img/product5.jpg" width="220" height="165" alt="Гель для волос «AMERICAN CREW»">
 							</p>
-							<p>		
-								<b>300 &#8381;</b>
-								<button type="button">Купить</button>
-							</p>
+						</a>
+						<p>		
+							<b>300 &#8381;</b>
+							<a href="">Купить</a>
+						</p>
 					</li>
 					<li>
+						<a href="catalog-item.html">
 							<h3>
-								<a href="catalog-item.html">
-									<span>Набор для бритья</span>
-									<span>«Baxter of California»</span>
-								</a>
+								<span>Набор для бритья</span>
+								<span>«Baxter of California»</span>
 							</h3>
 							<p>
-								<a href="catalog-item.html">
-										<img src="img/product6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
-								</a>
+								<img src="img/product6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
 							</p>
-							<p>		
-								<b>3 900 &#8381;</b>
-								<button type="button">Купить</button>
-							</p>
+						</a>
+						<p>		
+							<b>3 900 &#8381;</b>
+							<a href="">Купить</a>
+						</p>
 					</li>
 				</ul>
 				<ul>
 					<li><a href="">1</a></li>
-					<li>2</li>
+					<li><a>2</a></li>
 					<li><a href="">3</a></li>
 					<li><a href="">4</a></li>
 				</ul>
@@ -150,21 +188,26 @@
 		<footer>
 			<p>
 				Барбершоп «Бородинский»<br>
-				Адрес: г. Санкт-петербург, ул. б. Конюшенная, д. 19/8<br>
+				Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
 				<a href="">Как нас найти?</a><br>
 				Телефон: +7 (495) 666-02-66
 			</p>
 			<div>
-				<b>Давайте дружить!</b>
+				<p>Давайте дружить!</p>
 				<ul>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
+					<li>
+						<a href="">Вконтакте</a>
+					</li>
+					<li>
+						<a href="">Фейсбук</a>
+					</li>
+					<li>
+						<a href="">Инстаграм</a>
+					</li>
 				</ul>
 			</div>
-			<p>
-				<b>Разработано:</b><br>
-				<a href="https://htmlacademy.ru/">HTML Academy</a>
+			<p>Разработано:
+				<a href="https://htmlacademy.ru">HTML Academy</a>
 			</p>
 		</footer>
 	</body>
