--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,21 +3,24 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Набор для путешествий «Baxter of California» - Барбершоп «Бородинский»</title>
+		<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+		<link href="css/normalize.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
-	<body>
+	<body class="inner-page">
 		<header>
-			<nav>
+			<nav class="main-navigation">
 				<a href="index.html">
 					<img src="img/logo.svg" width="111" height="24" alt="Логотип барбешопа «Бородинский»">
 				</a>
-				<ul>
+				<ul class="site-navigation">
 					<li><a href="">Информация</a></li>
 					<li><a href="">Новости</a></li>
 					<li><a href="">Прайс-лист</a></li>
 					<li><a href="">Магазин</a></li>
 					<li><a href="">Контакты</a></li>
 				</ul>
-				<ul>
+				<ul class="user-navigation">
 					<li>
 						<a href="">Вход</a>
 					</li>
@@ -25,8 +28,8 @@
 			</nav>
 		</header>
 		<main>
-			<h1>Набор для путешествий «Baxter of California»</h1>
-			<ul>
+			<h1 class="page-title">Набор для путешествий «Baxter of California»</h1>
+			<ul class="breadcrumbs">
 				<li><a href="">Главная</a></li>
 				<li><a href="">Магазин</a></li>
 				<li><a href="">Средства для ухода</a></li>
@@ -36,26 +39,26 @@
 			<section>
 				<h2 class="visually-hidden">Изображения товара</h2>
 				<!-- Главная картинка завернута в p так как является визуальным описанием товара -->
-				<p>
+				<p class="product-photo-full">
 					<img src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">
 				</p>
-				<ul>
+				<ul class="product-photo-preview">
 					<li><img src="img/product-sm1.jpg" width="140" height="149" alt="Фото в анфас"></li>
 					<li><img src="img/product-sm2.jpg" width="140" height="149" alt="Фото отдельной части"></li>
 					<li><img src="img/product-sm3.jpg" width="140" height="149" alt="Фото всего набора"></li>
 				</ul>
 			</section>
-			<section>
+			<section class="product-info">
 				<h2 class="visually-hidden">Описание товара</h2>
 					<!-- Наличие и артикул завернуты в разные p на скринкасте -->
 					<p>Есть в наличии</p>
-					<p>Артикул: dexter-ae</p>
+					<p class="product-article">Артикул: dexter-ae</p>
 					<p>
 						Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
 					</p>
 					<p>		
-						<b>2 900 &#8381;</b>
-						<a href="">Купить</a>
+						<b class="price">2 900 &#8381;</b>
+						<a class="button" href="">Купить</a>
 					</p>
 					<h3>В набор входят:</h3>
 					<ul>
@@ -67,29 +70,30 @@
 					</ul>		
 			</section>
 		</main>
-		<footer>
-			<p>
+		<footer class="main-footer">
+			<p class="footer-contacts">
 				Барбершоп «Бородинский»<br>
 				Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
 				<a href="">Как нас найти?</a><br>
 				Телефон: +7 (495) 666-02-66
 			</p>
-			<div>
+			<div class="footer-social">
 				<p>Давайте дружить!</p>
 				<ul>
 					<li>
-						<a href="">Вконтакте</a>
+						<a class="social-button" href="">Вконтакте</a>
 					</li>
 					<li>
-						<a href="">Фейсбук</a>
+						<a class="social-button" href="">Фейсбук</a>
 					</li>
 					<li>
-						<a href="">Инстаграм</a>
+						<a class="social-button" href="">Инстаграм</a>
 					</li>
 				</ul>
 			</div>
-			<p>Разработано:
-				<a href="https://htmlacademy.ru">HTML Academy</a>
+			<p class="footer-copyright">
+				Разработано:
+				<a class="button" href="https://htmlacademy.ru">HTML Academy</a>
 			</p>
 		</footer>
 	</body>
