--- a/catalog.html
+++ b/catalog.html
@@ -3,21 +3,24 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Магазин - Барбершоп «Бородинский»</title>
+		<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+		<link href="css/normalize.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
-	<body>
+	<body class="inner-page">
 		<header>
-			<nav>
+			<nav class="main-navigation">
 				<a href="index.html">
 					<img src="img/logo.svg" width="111" height="24" alt="Логотип барбешопа «Бородинский»">
 				</a>
-				<ul>
+				<ul class="site-navigation">
 					<li><a href="">Информация</a></li>
 					<li><a href="">Новости</a></li>
 					<li><a href="">Прайс-лист</a></li>
 					<li><a href="">Магазин</a></li>
 					<li><a href="">Контакты</a></li>
 				</ul>
-				<ul>
+				<ul class="user-navigation">
 					<li>
 						<a href="">Вход</a>
 					</li>
@@ -25,15 +28,15 @@
 			</nav>
 		</header>
 		<main>
-			<h1>Средства для ухода</h1>
-			<ul>
+			<h1 class="page-title">Средства для ухода</h1>
+			<ul class="breadcrumbs">
 				<li><a href="index.html">Главная</a></li>
 				<li><a href="">Магазин</a></li>
 				<li>Средства для ухода</li>
 			</ul>
 			<section>
 				<h2 class="visually-hidden">Фильтр товаров</h2>
-				<form action="" method="get">
+				<form class="filter" action="" method="get">
 					<fieldset>
 						<legend>Производители:</legend>
 						<ul>
@@ -42,7 +45,7 @@
 								<label for="filter-baxter-of-california">Baxter of California</label>
 							</li>
 							<li>
-								<input id="filter-mr-natty"  type="checkbox" name="mr-natty">
+								<input id="filter-mr-natty"  type="checkbox" name="mr-natty" disabled>
 								<label for="filter-mr-natty">Mr Natty</label>
 							</li>
 							<li>
@@ -85,9 +88,9 @@
 			</section>
 			<section>
 				<h2 class="visually-hidden">Список средств для ухода</h2>
-				<ul>
+				<ul class="catalog-list">
 					<li>
-						<a href="catalog-item.html">
+						<a class="link" href="catalog-item.html">
 							<h3>
 								<span>Набор для путешествий</span>
 								<span>«Baxter of California»</span>
@@ -97,12 +100,12 @@
 							</p>
 						</a>
 						<p>		
-							<b>2 900 &#8381;</b>
-							<a href="">Купить</a>
+							<b class="price">2 900 &#8381;</b>
+							<a class="button" href="">Купить</a>
 						</p>
 					</li>
 					<li>
-						<a href="catalog-item.html">
+						<a class="link" href="catalog-item.html">
 							<h3>
 								<span>Увлажняющий кондиционер</span>
 								<span>«Baxter of California»</span>
@@ -112,12 +115,12 @@
 							</p>
 						</a>
 						<p>		
-							<b>750 &#8381;</b>
-							<a href="">Купить</a>
+							<b class="price">750 &#8381;</b>
+							<a class="button" href="">Купить</a>
 						</p>
 					</li>
 					<li>
-						<a href="catalog-item.html">
+						<a class="link" href="catalog-item.html">
 							<h3>
 								<span>Гель для волос</span>
 								<span>«SUAVECITO»</span>
@@ -127,12 +130,12 @@
 							</p>
 						</a>
 						<p>		
-							<b>290 &#8381;</b>
-							<a href="">Купить</a>
+							<b class="price">290 &#8381;</b>
+							<a class="button" href="">Купить</a>
 						</p>
 					</li>
 					<li>
-						<a href="catalog-item.html">
+						<a class="link" href="catalog-item.html">
 							<h3>
 								<span>Глина для укладки волос</span>
 								<span>«American crew»</span>
@@ -142,12 +145,12 @@
 							</p>
 						</a>
 						<p>		
-							<b>500 &#8381;</b>
-							<a href="">Купить</a>
+							<b class="price">500 &#8381;</b>
+							<a class="button" href="">Купить</a>
 						</p>
 					</li>
 					<li>
-						<a href="catalog-item.html">
+						<a class="link" href="catalog-item.html">
 							<h3>
 								<span>Гель для волос</span>
 								<span>«American crew»</span>
@@ -157,12 +160,12 @@
 							</p>
 						</a>
 						<p>		
-							<b>300 &#8381;</b>
-							<a href="">Купить</a>
+							<b class="price">300 &#8381;</b>
+							<a class="button" href="">Купить</a>
 						</p>
 					</li>
 					<li>
-						<a href="catalog-item.html">
+						<a class="link" href="catalog-item.html">
 							<h3>
 								<span>Набор для бритья</span>
 								<span>«Baxter of California»</span>
@@ -172,42 +175,43 @@
 							</p>
 						</a>
 						<p>		
-							<b>3 900 &#8381;</b>
-							<a href="">Купить</a>
+							<b class="price">3 900 &#8381;</b>
+							<a class="button" href="">Купить</a>
 						</p>
 					</li>
 				</ul>
-				<ul>
-					<li><a href="">1</a></li>
-					<li><a>2</a></li>
-					<li><a href="">3</a></li>
-					<li><a href="">4</a></li>
+				<ul class="pagination-list">
+					<li><a class="button" href="">1</a></li>
+					<li><a class="button current-page">2</a></li>
+					<li><a class="button" href="">3</a></li>
+					<li><a class="button" href="">4</a></li>
 				</ul>
 			</section>
 		</main>
-		<footer>
-			<p>
+		<footer class="main-footer">
+			<p class="footer-contacts">
 				Барбершоп «Бородинский»<br>
 				Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
 				<a href="">Как нас найти?</a><br>
 				Телефон: +7 (495) 666-02-66
 			</p>
-			<div>
+			<div class="footer-social">
 				<p>Давайте дружить!</p>
 				<ul>
 					<li>
-						<a href="">Вконтакте</a>
+						<a class="social-button" href="">Вконтакте</a>
 					</li>
 					<li>
-						<a href="">Фейсбук</a>
+						<a class="social-button" href="">Фейсбук</a>
 					</li>
 					<li>
-						<a href="">Инстаграм</a>
+						<a class="social-button" href="">Инстаграм</a>
 					</li>
 				</ul>
 			</div>
-			<p>Разработано:
-				<a href="https://htmlacademy.ru">HTML Academy</a>
+			<p class="footer-copyright">
+				Разработано:
+				<a class="button" href="https://htmlacademy.ru">HTML Academy</a>
 			</p>
 		</footer>
 	</body>
